feat: 닉네임 한글, 숫자만 입력 가능

--- a/SoonDelivery_Project/account/templates/signup.html
+++ b/SoonDelivery_Project/account/templates/signup.html
@@ -145,7 +145,7 @@
                         <p>닉네임</p>
                     </div>
                     <div class="input-area">
-                        <input class="input-box" type="text" id='nickname' name="nickname" placeholder="닉네임 입력" autocomplete="off" required>
+                        <input class="input-box" type="text" id='nickname' name="nickname" placeholder="닉네임 입력(한글과 숫자만 입력 가능)" autocomplete="off" required>
                         <button class="white-button" id="nickname_check" type="button">중복 확인</button>
                     </div>
                 </div>
