--- a/SoonDelivery_Project/chat/templates/chat/room.html
+++ b/SoonDelivery_Project/chat/templates/chat/room.html
@@ -5,6 +5,7 @@
     <title>Chat Room</title>
 </head>
 <body>
+    <textarea name="room_name" id="" cols="30" rows="10">{{ room.room_name }}</textarea>
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
