style: chat의 room_name을 room_title로 변경

--- a/SoonDelivery_Project/chat/templates/chat/chat.html
+++ b/SoonDelivery_Project/chat/templates/chat/chat.html
@@ -21,7 +21,7 @@
                 <a class="room" href="{% url 'room' room.id %}">
                     <div class="room-area">
                         <p class="room-name">
-                            방 제목 : {{room.room_name}}
+                            방 제목 : {{room.room_title}}
                         </p>
                     </div>
                 </a>
