--- a/SoonDelivery_Project/chat/templates/chat/room.html
+++ b/SoonDelivery_Project/chat/templates/chat/room.html
@@ -1,23 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
+    <!-- <link rel="stylesheet" href="{% static 'css/room.css' %}"> -->
     <title>Chat Room</title>
 </head>
 <body>
-    <textarea name="room_name" id="" cols="30" rows="10">{{ room.room_name }}</textarea>
+    <textarea id="room-title" id="" cols="30" rows="1">{{ room.room_title }}</textarea>
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
-    {{ room_name|json_script:"room-name" }}
+    {{ room_id|json_script:"room-id" }}
     <script>
-        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+        const roomId = JSON.parse(document.getElementById('room-id').textContent);
 
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
             + '/ws/chat/'
-            + roomName
+            + roomId
             + '/'
         );
 
