--- a/SoonDelivery_Project/account/static/css/delivery_detail.css
+++ b/SoonDelivery_Project/account/static/css/delivery_detail.css
@@ -40,7 +40,7 @@ body {
 /* top-title-area 시작 */
 #top-title-area {
   width: 100%;
-  margin: 30px 0px;
+  margin: 0px 0px 30px 0px;
   border-bottom: 2px solid #a7a7a7;
   display: flex;
   justify-content: space-between;
@@ -48,6 +48,7 @@ body {
 
 .top-title p {
   margin: 20px;
+  font-family: "Noto Sans KR", sans-serif;
   font-size: 2rem;
   color: #707070;
 }
