--- a/SoonDelivery_Project/account/templates/delivery_detail.html
+++ b/SoonDelivery_Project/account/templates/delivery_detail.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font.css' %}">
     <link rel="stylesheet" href="{% static 'css/delivery_detail.css' %}">
     <title>Detail</title>
 </head>
