--- a/SoonDelivery_Project/delivery/static/css/delivery.css
+++ b/SoonDelivery_Project/delivery/static/css/delivery.css
@@ -40,7 +40,7 @@ body {
 /* top-title-area 시작 */
 #top-title-area {
   width: 100%;
-  margin: 30px 0px;
+  margin: 0px 0px 30px;
   border-bottom: 2px solid #a7a7a7;
   display: flex;
   justify-content: space-between;
