--- a/SoonDelivery_Project/chat/static/css/room.css
+++ b/SoonDelivery_Project/chat/static/css/room.css
@@ -27,13 +27,12 @@ a {
   justify-content: center;
   flex-direction: column;
   height: 100%;
-  padding: 0px 40px 40px 40px;
 }
 
 #top-title-area {
   width: 100%;
   margin-bottom: 30px;
-  
+  box-shadow: 0px 3px 5px 3px rgb(0 0 0 / 20%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -202,6 +201,50 @@ a {
   font-weight: 200;
   margin: 0;
 }
+
+/* input-area 시작 */
+
+#input-area{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  box-shadow: 0px 3px 5px 3px rgb(0 0 0 / 20%);
+  background-color: white;
+  padding: 10px 0px 10px 0px;
+}
+
+#chat-message-input{
+  border-radius: 50px 50px 50px 50px;
+  border: 1px solid rgb(189, 189, 189) ;
+  width: 80%;
+  height: 30px;
+  padding-left: 10px;
+}
+
+input:focus{
+  outline: none;
+}
+
+#chat-message-submit{
+  border-radius: 50px 50px 50px 50px;
+  border: 1px solid rgb(189, 189, 189) ;
+  background-color: #a7b3ff;
+  width: 35px;
+  height: 35px;
+  padding: 0px;
+  margin-left: 5px;
+}
+
+#send-image{
+  width: 100%;
+  height: 100%;
+}
+
+/* input-area 끝 */
 
 /* footer 시작 */
 footer {
