--- a/SoonDelivery_Project/chat/templates/chat/room-1.html
+++ b/SoonDelivery_Project/chat/templates/chat/room-1.html
@@ -53,19 +53,108 @@
                         <div class="order-preview-space">
                             <div class="order-preview" >
                                 <p class="order-menu">방 제목 : {{room.room_title}}</p>
-                            </div>
+                                {% load static %}
+                                <!DOCTYPE html>
+                                <html>
+                                <head>
+                                    <meta charset="utf-8"/>
+                                    <!-- <link rel="stylesheet" href="{% static 'css/room.css' %}"> -->
+                                    <title>Chat Room</title>
+                                </head>
+                                <body>
+                                    <textarea id="room-title" id="" cols="30" rows="1">{{ room.room_title }}</textarea>
+                                    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
+                                    <input id="chat-message-input" type="text" size="100"><br>
+                                    <input id="chat-message-submit" type="button" value="Send">
+                                    {{ room_id|json_script:"room-id" }}
+                                    <script>
+                                        const roomId = JSON.parse(document.getElementById('room-id').textContent);
+                                
+                                        const chatSocket = new WebSocket(
+                                            'ws://'
+                                            + window.location.host
+                                            + '/ws/chat/'
+                                            + roomId
+                                            + '/'
+                                        );
+                                
+                                        chatSocket.onmessage = function(e) {
+                                            const data = JSON.parse(e.data);
+                                            document.querySelector('#chat-log').value += (data.message + '\n');
+                                        };
+                                
+                                        chatSocket.onclose = function(e) {
+                                            console.error('Chat socket closed unexpectedly');
+                                        };
+                                
+                                        document.querySelector('#chat-message-input').focus();
+                                        document.querySelector('#chat-message-input').onkeyup = function(e) {
+                                            if (e.keyCode === 13) {  // enter, return
+                                                document.querySelector('#chat-message-submit').click();
+                                            }
+                                        };
+                                
+                                        document.querySelector('#chat-message-submit').onclick = function(e) {
+                                            const messageInputDom = document.querySelector('#chat-message-input');
+                                            const message = messageInputDom.value;
+                                            chatSocket.send(JSON.stringify({
+                                                'message': message
+                                            }));
+                                            messageInputDom.value = '';
+                                        };
+                                    </script>
+                                </body>
+                                </html></div>
                         </div>
                     </a>
                 </div>
             </div>
             {% endfor %}
         </div>
-        <div>
-          
+        <div class="dialog">
+          <textarea id="chat-log" cols="50" rows="10"></textarea><br>
         </div>
     </div>
-    <!-- footer 시작 -->
-    
-    <!-- footer 끝 -->
+    <div id="input-area">
+      <input id="chat-message-input" type="text">
+      <button id = "chat-message-submit" type="button"><img id="send-image" src="{% static 'img/arrow-small-up.png' %}" alt=""></button>
+    </div>
+    {{ room_id|json_script:"room-id" }}
+    <script>
+        const roomId = JSON.parse(document.getElementById('room-id').textContent);
+
+        const chatSocket = new WebSocket(
+            'ws://'
+            + window.location.host
+            + '/ws/chat/'
+            + roomId
+            + '/'
+        );
+
+        chatSocket.onmessage = function(e) {
+            const data = JSON.parse(e.data);
+            document.querySelector('#chat-log').value += (data.message + '\n');
+        };
+
+        chatSocket.onclose = function(e) {
+            console.error('Chat socket closed unexpectedly');
+        };
+
+        document.querySelector('#chat-message-input').focus();
+        document.querySelector('#chat-message-input').onkeyup = function(e) {
+            if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#chat-message-submit').click();
+            }
+        };
+
+        document.querySelector('#chat-message-submit').onclick = function(e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'message': message
+            }));
+            messageInputDom.value = '';
+        };
+    </script>
 </body>
 </html>
